tests/references/ill-typed/bad-refs-3.stella
language core;

extend with
  #references,
  #sequencing,
  #let-bindings,
  #arithmetic-operators,
  #natural-literals;

fn main(n : Nat) -> Nat {
  return
    let x = new(0) in
    x := *x + 1;
    x := x * x;
    *x
}
